update create table statement

--- a/yelp-to-rds.ipynb
+++ b/yelp-to-rds.ipynb
@@ -623,7 +623,7 @@
     "                PRICE INT,\n",
     "                ADDRESS VARCHAR(160),\n",
     "                PHONE VARCHAR(100),\n",
-    "                REVIEW_COUNT VARCHAR(100),\n",
+    "                REVIEW_COUNT INT,\n",
     "                CATEGORIES VARCHAR(200));'''\n",
     "         )"
    ]
